Juego con interfaz de consola terminado y testeado, bugs encontrados: - Es posible combatir infinitamente con un monstruo ya derrotado para conseguir recompensas ilimitadas (Solucion propuesta en el cogido de nextStep) - Cuando un combate termina por rondas siempre gana el jugador (No necesariamente un bug)